
Moqui Framework Release Notes

===========================================================================
Release 1.0.2 - Date Not Yet Decided
===========================================================================

Version 1.0.2 ... TODO

This release includes:

- Added support for nested parameter elements in service definitions for
  Map and Node (groovy.util.Node) parameters; the main reason for Node
  support is for XML messages coming in such as the OAGIS ones to be
  handled directly by a service (this is one part of Mantle)

Bug Fixes:


===========================================================================
Release 1.0.1 - 31 December 2011
===========================================================================

Version 1.0.1 is primarily a maintenance and bug fix release. The few new
features are mostly extensions to existing features for improved
flexibility, to round out functionality, and better support standards.

This release includes:

- All the great features of the 1.0.0 and previous releases
- Updated Gradle build file for version 1.0-milestone-6 (previously ran on
  1.0-milestone-3)
- Added support to automatically clear caches for view-entity based in
  updates to member-entity records, as long as all member-entity PK fields
  are directly or indirectly aliased on the view-entity
- Improved entity-auto service error handling
- Changed login screen to render in the same request instead of a redirect
  and to return a status code of 401 (related to bug #3442045)
- Made form field sub-fields more flexible, can include any widget tag
  under them now; this has been tested with render-mode and should work
  with others as they just run the corresponding macro for the widget
  element, but your mileage may vary
- Added support for a classes directory under the runtime directory, and
  under each component directory to go along with the lib directories so
  that classpath resources do not have to be in a jar file