@@ -65,7 +65,7 @@ This Work includes contributions authored by David E. Jones, not as a
             </xs:attribute>
             <xs:attribute name="location" type="xs:string" use="optional"/>
             <xs:attribute name="method" type="xs:string" use="optional"/>
-            <xs:attribute name="authenticate" type="boolean" default="true">
+            <xs:attribute name="authenticate" default="true">
                 <xs:annotation><xs:documentation>
                     If not set to false (is true by default) a user much be logged in to run this service. If the
                     service is running in an ExecutionContext with a user logged in that will qualify. If not then
@@ -78,7 +78,18 @@ This Work includes contributions authored by David E. Jones, not as a
 
                     An "authTenantId" parameter may also be specified to authenticate the user in a specific tenant
                     instance. If specified will be used to run the service with that as the context tenant.
+
+                    If set to anonymous-all or anonymous-view not only with authentication not be required, but this
+                    service will run as if authorized (using the _NA_ UserAccount) for all actions or for view-only.
                 </xs:documentation></xs:annotation>
+                <xs:simpleType>
+                    <xs:restriction base="xs:token">
+                        <xs:enumeration value="true"/>
+                        <xs:enumeration value="false"/>
+                        <xs:enumeration value="anonymous-all"/>
+                        <xs:enumeration value="anonymous-view"/>
+                    </xs:restriction>
+                </xs:simpleType>
             </xs:attribute>
             <xs:attribute name="allow-remote" type="boolean" default="false"/>
             <xs:attribute name="validate" type="boolean" default="true"/>
