@@ -9,10 +9,13 @@ Version 1.0.2 ... TODO
 
 This release includes:
 
-- Added support for nested parameter elements in service definitions for
+- Support for nested parameter elements in service definitions for
   Map and Node (groovy.util.Node) parameters; the main reason for Node
   support is for XML messages coming in such as the OAGIS ones to be
   handled directly by a service (this is one part of Mantle)
+- Methods to ArtifactExecutionFacade and options to the authenticate
+  attribute on the service definition to make the current artifact
+  anonymously authorized
 
 Bug Fixes:
 
